# Ontology-Playground

./: .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  README.ko.md  README.md  RUNNING.md  TODO.md  docker-compose.company.yml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.embed.ts  vitest.config.ts
.omx/: metrics.json
api/: package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alignment_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  generation.py  library.py  ontology.py  publish.py  query.py  queue.py  reviews.py  schema.py
backend/app/core/: __init__.py  errors.py
backend/app/models/: __init__.py  contracts.py
backend/app/repositories/: __init__.py  mock_repository.py
backend/app/services/: __init__.py  extraction_mode.py  generation_service.py  library_service.py  llm_diagnostic_service.py  natural_language_cypher_service.py  neo4j_graphrag_adapter.py  neo4j_graphrag_config.py  neo4j_publish_service.py  neo4j_query_service.py  ontology_generation_service.py  openai_error_utils.py  queue_service.py  review_service.py  schema_guided_extractor.py  schema_normalizer.py  schema_service.py
backend/scripts/: demo_neo4j_graphrag_run.py  probe_complex_extraction.py  probe_cosmic_queue.py  probe_ontology_generation.py  verify_full_backend_graph.py
backend/tests/: test_api.py  test_llm_config.py
buggy-ontologies/: mortgage-ontology.rdf
src/: App.tsx  (+1 more)
(+370 files in other folders)
